remove blog and fix color btn on mobile

--- a/src/app/components/product/product.component.scss
+++ b/src/app/components/product/product.component.scss
@@ -239,7 +239,7 @@
 }
 
 .button-product {
-  color: #352F2A;
+  color: #352F2A !important;
   font-family: Manrope;
   font-size: 24px;
   font-style: normal;
@@ -260,7 +260,7 @@
 
 .button-product:hover {
   background: #352F2A;
-  color: #E8E4D9;
+  color: #E8E4D9 !important;
 }
 
 .buttons-product {
